# koan

./: .dockerignore  .gitignore  AI_POLICY.md  BACKLOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  Makefile  README.md  docker-compose.auth.yml  docker-compose.yml  docker-entrypoint.sh  env.docker.example  env.example  index.html  projects.example.yaml  projects.sample.yaml  pyproject.toml  setup-docker.sh  skills
.github/: commit-msg-template.md
deploy/: Dockerfile.cloud  cloud-deploy.sh
docs/: auto-update.md  commit-conventions.md  docker.md  github-commands.md  introspection-beyond-code.md  jira-integration.md  launchd.md  maint.md  messaging-slack.md  messaging-telegram.md  provider-claude.md  provider-local.md  security-review.md  skills.md  spec-always-up-railway.md  ssh-setup.md  threat-model-agent-disalignment.md  user-manual.md
github-profile/: README.md  TOKEN-REQUIREMENTS.md  check-permissions.sh  setup-profile.sh
instance.example/: README.md  config.yaml  mission-report.md  missions.md  outbox.md  soul.md  usage.md
koan/: .test_durations  awake.py  contemplative-prompt.md  daily_report.py  dashboard.py  extract_mission.py  git_sync.py  health_check.py  migrate_memory.py  missions.py  notify.py  recover.py  requirements.txt  run.py  run.sh  system-prompt.md  test_awake.py  test_dashboard.py  test_git_sync.py  test_health_check.py  test_missions.py  test_notify.py  test_recover.py  test_utils.py  utils.py
public/: KOANS.md  LESSONS.md  MANIFESTO.md
scripts/: release.sh  update-coverage-baseline.sh
workspace/: README.md
(+652 files in other folders)
