[project]
name = "koan"
version = "0.1.0"
description = "Autonomous background agent using idle Claude API quota"
requires-python = ">=3.14"

[tool.pytest.ini_options]
testpaths = ["koan/tests"]
pythonpath = ["koan"]
filterwarnings = [
    "error::ResourceWarning",
]
markers = [
    "slow: marks tests as slow (run in dedicated CI groups)",
]
timeout = 60

[tool.coverage.run]
source = ["app"]
omit = [
    "app/setup_wizard.py",
    "app/onboarding.py",
]
parallel = true

[tool.coverage.report]
show_missing = true
skip_empty = true
precision = 1
